--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 tasks.named('bootBuildImage') {
