--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,9 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:mem:aa;MODE=MYSQL
-spring.datasource.username=sa
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.defer-datasource-initialization=true
-
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
 
 
 
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=  jdbc:mariadb://localhost:3306/book
+spring.datasource.username= root
+spring.datasource.password= 3419
 
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.hibernate.format_sql = true
-
-
-
-
-
-spring.mvc.servlet.load-on-startup=1
